--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <packaging>hpi</packaging>
     <name>TODO Plugin</name>
     <properties>
+	<jenkins.version>2.164.3</jenkins.version>
 	<java.level>8</java.level>
     </properties>
     <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
