--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+	<dependency>
+	    <groupId>javax.ws.rs</groupId>
+	    <artifactId>javax.ws.rs-api</artifactId>
+	    <version>2.0</version>
+	</dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
